--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ PyJWT==2.10.1
 pytest==8.3.5
 pytest-cov==6.1.1
 pytest-django==4.11.1
+python-decouple==3.8
 sqlparse==0.5.3
 typing_extensions==4.13.2
 whitenoise==6.9.0
